# stark_util

./: Cargo.toml  Makefile  README.md  builder.rs  rustfmt.toml
.github/workflows/: ci.yaml
examples/: example.rs
src/: builder.rs  call.rs  client.rs  contract.rs  decoder.rs  encoder.rs  error.rs  invoke.rs  lib.rs  network.rs  num.rs  primitive.rs  proto.rs  provider.rs  serde.rs  u256.rs  zklink.rs  zklink_test.rs
src/codec/: compat.rs  mod.rs
src/codec/decode/: de_owned.rs  decoder.rs  error.rs  impl_tuples.rs  mod.rs  reader.rs
src/codec/encode/: encoder.rs  error.rs  impl_tuples.rs  mod.rs
src/der/: de_owned.rs  impl_tuples.rs  mod.rs  reader.rs
src/primitive/: mod.rs  primitive.rs  tx_hash.rs  u256.rs
src/provider/: call.rs  caller.rs  client.rs  invoke.rs  invoker.rs  mod.rs  network.rs  provider.rs
src/ser/: impl_tuples.rs  mod.rs
src/zklink/: codec.rs  mod.rs  model.rs  zklink.rs  zklink_test.rs
tests/: counter.rs  test.rs  vote.rs
tests/contracts/counter/: Scarb.toml
tests/contracts/counter/src/: counter_Counter.sierra.json  lib.cairo
tests/contracts/vote/: Scarb.toml
tests/contracts/vote/src/: lib.cairo  vote_Vote.sierra.json
