[package]
name = "stark_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
serde = "1.0"
hex = "0.4"
primitive-types = "0.12"
url = "2.3"
async-trait = "0.1"
anyhow = "1.0.0"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
